[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "timer-cipher"
version = "0.1.0"
description = "A tiny reversible four-letter keyed cipher for minute-level time ranges."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TimeR" }]
keywords = ["time", "cipher", "format-preserving", "cli"]
dependencies = []

[project.scripts]
timer = "timer_cipher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["timer_cipher*"]
